--- a/index.ipynb
+++ b/index.ipynb
@@ -240,7 +240,7 @@
    },
    "outputs": [],
    "source": [
-    "\"art.vandelay@vandelay.co\".endwith# False"
+    "\"art.vandelay@vandelay.co\".endwith('com'# False"
    ]
   },
   {
