--- a/index.ipynb
+++ b/index.ipynb
@@ -250,7 +250,7 @@
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\".Endith('.com')# False"
+    "\"art.vandelay@vandelay.co\".Endswith('.com')# False"
    ]
   },
   {
